fixed overlapping flags problem when the input field was used for more than one number in single form

--- a/less/default.less
+++ b/less/default.less
@@ -702,7 +702,7 @@
     .v-hide {
         visibility: hidden;
     }
-    input[type=text], 
+    input[type=text],
     input[type=tel] {
         position: relative;
         z-index: 0;
@@ -797,7 +797,7 @@
     .country-list {
         list-style: none;
         position: absolute;
-        z-index: 2;
+        z-index: 15;
         padding: 0;
         margin: -1px 0 0 -1px;
         box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
@@ -835,5 +835,5 @@
         .country-name {
             margin-right: 6px;
         }
-    }  
+    }
 }
